--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body{margin: unset;}
 	align-items: baseline;
 }
 
+header img
+{
+	height: 76px;
+	margin-top: 3em;
+	margin-left: 25%;
+}
+
 .reservation
 {
 	text-align: center;
@@ -61,18 +68,19 @@ nav ul
 nav li
 {
 	height: 58px;
+	font-size: 28px;
 	font-weight: bold;
 	border-radius: 60px;
 	background-color: #F2F2F2;
 	list-style-type: none;
-	padding: 4em;
+	padding: 2em;
 	margin-bottom: 3em;
 	box-shadow: 5px 5px 30px grey;
 }
 
 nav i
 {
-	padding-right: 3em;
+	padding-right: 2em;
 }
 
 .restaurants
