--- a/style.css
+++ b/style.css
@@ -7,18 +7,48 @@ h2{font-weight: bold;}
 
 body{margin: unset;}
 
-.town_position
+header
 {
-	font-size: 20px;
-	display: flex;
-	align-items: baseline;
+	background-color: grey;
 }
 
 header img
 {
+	width: 100%;
 	height: 76px;
-	margin-top: 3em;
-	margin-left: 25%;
+	background-color: white;
+	padding-top: 3em;
+	padding-bottom: 2em;
+	box-shadow: 0px 0px 10px black;
+}
+
+.town_position
+{
+	font-size: 20px;
+	display: inline-flex;
+	align-items: center;
+	padding-left: 15em;
+	padding-bottom: 1em;
+}
+
+i.fas.fa-map-marker-alt
+{
+	font-size: 50px;
+	padding-right: 0.5em;
+}
+
+.town_position input[type="search"]
+{
+	font-size: 40px;
+	border: 0px;
+	padding: 0.5em 0em 0.5em 0em;
+	background-color: grey;
+}
+
+.town_position input[value="Paris, Belleville "]
+{
+	font-size: 45px;
+	font-weight: bold;
 }
 
 .reservation
@@ -48,6 +78,7 @@ button.button
 	border: 0px;
 	border-radius: 70px;
 	background-color: #FF79DA ;
+	box-shadow: 0px 0px 30px grey;
 }
 
 nav
@@ -80,6 +111,7 @@ nav li
 
 nav i
 {
+	color: grey;
 	padding-right: 2em;
 }
 
@@ -133,10 +165,15 @@ nav i
 	font-weight: bold;
 }
 
+i.far.fa-heart
+{
+	font-size: 65px;
+}
+
 footer
 {
-	background-color: grey;
-	padding: 2em;
+	background-color: dimgrey;
+	padding: 3em;
 }
 
 .logo_de_fin
