--- a/style.css
+++ b/style.css
@@ -77,18 +77,19 @@ button.button
 	margin-bottom: 2em;
 	border: 0px;
 	border-radius: 70px;
-	background-color: #FF79DA ;
+	background: linear-gradient(-7deg, #9356DC, #FF79DA);
 	box-shadow: 0px 0px 30px grey;
 }
 
 nav
 {
-	padding: 4em 3em 7em 3em;
+	font-size: 30px;
+	padding: 4em 3em 4em 3em;
 	text-align: left;
 }
 nav h2
 {
-	font-size: 70px;
+	font-size: 50px;
 }
 
 nav ul
@@ -99,9 +100,9 @@ nav ul
 nav li
 {
 	height: 58px;
-	font-size: 28px;
+	font-size: 22px;
 	font-weight: bold;
-	border-radius: 60px;
+	border-radius: 47px;
 	background-color: #F2F2F2;
 	list-style-type: none;
 	padding: 2em;
@@ -109,10 +110,30 @@ nav li
 	box-shadow: 5px 5px 30px grey;
 }
 
+nav span
+{
+	color: white;
+	background-color: #9356DC;
+	border-radius: 50%;
+	padding: 0em 0.6em 0em 0.6em;
+	margin-right: 2em;
+	margin-left: -3em;
+}
+
 nav i
 {
 	color: grey;
 	padding-right: 2em;
+}
+
+i.fas.fa-store
+{
+	color: #9356DC;
+}
+
+li.shop
+{
+	background-color: rgb(245,235,245);
 }
 
 .restaurants
@@ -128,7 +149,7 @@ nav i
 
 .restaurants h2
 {
-	font-size: 70px;
+	font-size: 50px;
 }
 
 .cards
@@ -170,6 +191,13 @@ i.far.fa-heart
 	font-size: 65px;
 }
 
+i.far.fa-heart:hover
+{
+	cursor: pointer;
+	border: 0px;
+	color: #9356DC;
+}
+
 footer
 {
 	background-color: dimgrey;
@@ -186,6 +214,7 @@ footer
 footer img
 {
 	font-size: 13px;
+	filter: invert(100%);
 }
 
 footer i
