--- a/Menu/style_menu.css
+++ b/Menu/style_menu.css
@@ -1,9 +1,57 @@
-
+*{font-family: 'Roboto', sans-serif;}
 
 
 body
 {
 	margin: 0px;
+}
+
+header{display: block;}
+
+header a
+{
+	text-decoration: none;
+	display: inline-flex;
+	align-items: center;
+	padding: 3em 6em 3em 6em;
+}
+
+i.fas.fa-arrow-left
+{
+	font-size: 50px;
+	color: rgb(53,53,53);
+	padding-right: 3em;
+}
+
+header a img
+{
+	height: 75px;
+}
+
+.background img
+{
+	width: 100%;
+}
+
+.carte
+{
+	padding: 2em 3em 4em 3em;
+	background: #F2F2F2;
+	border-radius: 150px 150px 0px 0px;
+	position: relative;
+	bottom: 9em;
+}
+
+.carte h1
+{
+	font-size: 80px;
+	display: flex;
+	justify-content: space-between;
+}
+
+i.far.fa-heart
+{
+	padding-right: 0.5em;
 }
 
 button.button
