--- a/Menu/style_menu.css
+++ b/Menu/style_menu.css
@@ -47,7 +47,7 @@ header a img
 
 .carte h1
 {
-	font-size: 80px;
+	font-size: 72px;
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
@@ -61,39 +61,57 @@ h1 strong
 i.far.fa-heart
 {
 	padding-right: 0.5em;
+	cursor: pointer;
 }
 
 article
 {
+	display: block;
 	margin-bottom: 6em;
 }
 
 .carte h2
 {
 	font-weight: 300;
-	font-size: 34px;
+	font-size: 46px;
+	margin-bottom: 1.2em;
+}
+
+.overline
+{
+	padding-bottom: 0.2em;
+	border-bottom: 6px solid #99E2D0;
 }
 
 .etiquette
 {
+	cursor: pointer;
 	width: auto;
-	font-size: 14px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: flex-end;
+	font-size: 7px;
 	background-color: white;
-	border-radius: 45px;
-	padding: 2em;
-	margin-bottom: 3em;
+	border-radius: 35px;
+	padding: 4em 3em 4em 0em;
+	margin-bottom: 6em;
 }
 
 .etiquette p
 {
-	width: 100%;
+	width: 84%;
 	margin: 0px;
 	font-size:16px;
 }
 
+.etiquette strong
+{
+	font-size: 49px;
+}
+
 .etiquette .accompagnement
 {
-	font-size: 14px;
+	font-size: 39px;
 }
 
 span.prix
@@ -101,15 +119,21 @@ span.prix
 	font-size: 44px;
 	font-weight: bold;
 	float: right;
-	width: 12%;
+}
+
+span.check
+{
+	display: none;
 }
 
 button.button
 {
+	cursor: pointer;
 	color: white;
 	font-size: 53px;
 	padding: 0.8em 2em 0.8em 2em;
 	margin-left: 21%;
+	margin-right: 21%;
 	margin-bottom: 2.5em;
 	border: 0px;
 	border-radius: 70px;
@@ -125,7 +149,7 @@ footer
 
 .logo_de_fin
 {
-	padding-left: 2em;
+	padding-left: 0em;
 	margin-top: 2em;
 	margin-bottom: 2em;
 }
@@ -146,9 +170,26 @@ i.fas.fa-hands-helping
 	font-size: 12px;
 }
 
+footer ul
+{
+	padding-left: 0px;
+}
+
 footer li
 {
+	font-size: 43px;
 	color: white;
 	list-style-type: none;
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
+}
+
+i.fas.fa-utensils
+{
+	padding-right: 0.5em;
+}
+
+i.fas.fa-hands-helping
+{
+	font-size: 42px;
+	padding-right: 0.5em;
 }
