--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ button.button
 
 nav
 {
+	display: block;
 	font-size: 20px;
 	padding: 4em 3em 4em 3em;
 	text-align: left;
@@ -237,6 +238,11 @@ footer i
 i.fas.fa-hands-helping
 {
 	font-size: 12px;
+}
+
+ul
+{
+	padding-left: 0px;
 }
 
 footer li
