--- a/style.css
+++ b/style.css
@@ -95,36 +95,40 @@ nav h2
 
 nav ul
 {
+	display: block;
 	padding-left: 0px;
 }
 
 nav li
 {
-	height: 58px;
-	font-size: 20px;
+	height: 34px;
+	font-size: 42px;
 	font-weight: bold;
+	display: flex;
+	align-items: center;
 	border-radius: 47px;
 	background-color: #F2F2F2;
 	list-style-type: none;
-	padding: 2em;
-	margin-bottom: 3em;
+	padding: 1.5em;
+	margin-bottom: 2em;
 	box-shadow: 5px 5px 30px grey;
 }
 
 nav span
 {
+	font-size: 27px;
 	color: white;
 	background-color: #9356DC;
-	border-radius: 50%;
-	padding: 0em 0.6em 0em 0.6em;
-	margin-right: 2em;
+	border-radius: 50px 50px;
+	padding: 0.4em 0.7em 0.4em 0.7em;
+	margin-right: 1.5em;
 	margin-left: -3em;
 }
 
 nav i
 {
 	color: grey;
-	padding-right: 2em;
+	padding-right: 1em;
 }
 
 i.fas.fa-store
@@ -219,7 +223,6 @@ footer
 
 .logo_de_fin
 {
-	padding-left: 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
 }
@@ -229,6 +232,19 @@ footer img
 	font-size: 13px;
 	filter: invert(100%);
 }
+
+footer ul
+{
+	padding-left: 0px;
+}
+
+footer li
+{
+	color: white;
+	list-style-type: none;
+	margin-bottom: 1em;
+}
+
 
 footer i
 {
@@ -240,14 +256,3 @@ i.fas.fa-hands-helping
 	font-size: 12px;
 }
 
-ul
-{
-	padding-left: 0px;
-}
-
-footer li
-{
-	color: white;
-	list-style-type: none;
-	margin-bottom: 1em;
-}
