--- a/style.css/style_menu.css
+++ b/style.css/style_menu.css
@@ -15,9 +15,9 @@ header
 header a
 {
 	text-decoration: none;
-	display: inline-flex;
+	display: flex;
 	align-items: center;
-	padding: 3em 6em 3em 6em;
+	padding: 3em 6em 3em 3em;
 }
 
 i.fas.fa-arrow-left
@@ -155,67 +155,3 @@ button.button
 	box-shadow: 0px 0px 30px grey;
 }
 
-footer
-{
-	background-color: rgb(53,53,53);
-	padding: 3em;
-}
-
-.logo_de_fin
-{
-	padding-left: 0em;
-	margin-top: 2em;
-	margin-bottom: 2em;
-}
-
-footer img
-{
-	font-size: 13px;
-	width: 35%;
-	filter: invert(100%);
-}
-
-footer .info
-{
-	width: 85%;
-}
-
-footer i
-{
-	padding-right: 2em;
-}
-
-i.fas.fa-hands-helping
-{
-	font-size: 12px;
-}
-
-footer ul
-{
-	padding-left: 0px;
-}
-
-footer li
-{
-	font-size: 43px;
-	color: white;
-	list-style-type: none;
-	margin-bottom: 0.5em;
-}
-
-footer a
-{
-	text-decoration: none;
-	color: white;
-}
-
-i.fas.fa-utensils
-{
-	padding-right: 0.5em;
-}
-
-i.fas.fa-hands-helping
-{
-	font-size: 42px;
-	padding-right: 0.5em;
-}
