--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header
 	background-color: rgb(234,234,234);
 }
 
-header img[src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg"]
+header img[src="maquettes_ohmyfood/images/logo/ohmyfood@2x.svg"]
 {
 	width: 100%;
 	height: 76px;
