--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -61,6 +61,8 @@ h1 strong
 
 i.far.fa-heart
 {
+	color: black;
+	position: inherit;
 	padding-right: 0.5em;
 	cursor: pointer;
 }
@@ -155,3 +157,46 @@ button.button
 	box-shadow: 0px 0px 30px grey;
 }
 
+/* animation keyframe_download*/
+body /*carte menu*/
+{
+   &.carte{
+   	animation: .carte 2000ms;
+   }
+}
+
+@keyframes .carte{
+	0%{
+		background: white;
+	}
+	10%{
+		background: #F2F2F2;
+	}
+	15%{
+		background: linear-gradient(to top, transparent 0%, #F2F2F2 100%);
+	}
+	20%{
+		background: linear-gradient(to top, transparent 10%, #F2F2F2 100%);
+	}
+	30%{
+		background: linear-gradient(to top, transparent 20%, #F2F2F2 100%);
+	}
+	40%{
+		background: linear-gradient(to top, transparent 30%, #F2F2F2 100%);
+	}
+	50%{
+		background: linear-gradient(to top, transparent 40%, #F2F2F2 100%);
+	}
+	60%{
+		background: linear-gradient(to top, transparent 50%, #F2F2F2 100%);
+	}
+		70%{
+		background: linear-gradient(to top, transparent 60%, #F2F2F2 100%);
+	}
+		80%,90%{
+		background: linear-gradient(to top, transparent 80%, #F2F2F2 100%);
+	}
+	100%{
+		background: linear-gradient(to top, transparent 100%, #F2F2F2 0%);
+	}
+}
