--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,126 @@
 
 h2{font-weight: bold;}
 
-body{margin: unset;}
+body{	margin: unset;}
+
+.page-chargement
+{
+
+	height: 100%;
+	width: 100%;
+	background-color: transparent;
+	position: fixed;
+	visibility: hidden;
+	opacity: 0.8;
+	text-align: center;
+	animation-name: page-chargement;
+	animation-duration: 1500ms;
+	animation-fill-mode: forward;
+}
+
+@keyframes page-chargement{
+	0%{
+		background-color: transparent;
+		visibility: inherit;
+	}
+	50%{
+		background-color: #F2F2F2;
+	}
+	100%{
+		background-color: transparent;
+		visibility: hidden;
+	}
+}
+
+
+.circle-loader
+{
+	height: 100px;
+	width: 100px;
+	margin: 50% 40%;
+	background: transparent;
+	border-radius: 50%;
+	padding: 79px;
+	animation-name: circle-loader;
+	animation-duration: 1000ms;
+	animation-timing-function: ease;
+	animation-fill-mode: forward;
+}
+
+@keyframes circle-loader{
+0%{
+	background: linear-gradient(45deg, #9356DC, #FF79DA);
+}
+25%{
+	background: linear-gradient(90deg, #9356DC, #FF79DA);
+}
+50%{
+	background: linear-gradient(180deg, #9356DC, #FF79DA);
+}
+75%{
+	background: linear-gradient(270deg, #9356DC, #FF79DA);
+}
+90%{
+	background: linear-gradient(360deg, #9356DC, #FF79DA);
+}
+100%{
+	background: transparent;
+	visibility: hidden;
+}
+}
+
+.circle
+{
+	background-color: transparent;
+	opacity: 0.8;
+	border-radius: 50%;
+	padding: 50%;
+	animation-name: page-chargement;
+	animation-duration: 1500ms;
+	animation-fill-mode: forward;
+}
+
+@keyframes circle{
+	0%{
+		background-color: transparent;
+	}
+	50%{
+		background-color: #F2F2F2;
+	}
+	100%{
+		background-color: transparent;
+		visibility: hidden;
+	}
+}
+
+.text-chargement
+{
+	font-family: 'Shrikhand', cursive;
+	font-size: 60px;
+	color: transparent;
+	animation-name: text-chargement;
+	animation-duration: 1000ms;
+	animation-fill-mode: forward
+}
+
+@keyframes text-chargement{
+	0%{
+		color: transparent;
+	}
+		25%{
+		color: grey;
+	}
+	50%{
+		color: black;
+	}
+		75%{
+		color: grey;
+	}
+	100%{
+		color: transparent;
+		visibility: hidden;
+	}
+}
 
 header
 {
@@ -236,7 +355,7 @@ i.far.fa-heart
 {
 	font-size: 65px;
 	position: absolute;
-	color: black;
+	color: #FF79DA;
 }
 
 i.fas.fa-heart
@@ -244,12 +363,12 @@ i.fas.fa-heart
 	font-size: 65px;
 	color: white;
 	opacity: 0;
-	transform: scale(1.0);
-	transform: all 400ms;
+	transform: scale(0.5);
+	transition: all 5000ms;
 }
 
 
-i.fas.fa-heart:active
+i.fas.fa-heart:active,i.fas.fa-heart:hover
 {
 	border: 0px;
 	opacity: 1;
