--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -4,6 +4,7 @@
 body
 {
 	margin: 0px;
+	background-color: #F2F2F2;
 }
 
 header
@@ -35,6 +36,21 @@ header a img
 .background img
 {
 	width: 100%;
+	animation-name: background;
+	animation-duration: 3000ms;
+	animation-delay: 0.1s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes background{
+	0%{
+		transform: translateY(-40%);
+		opacity: 0.1;
+	}
+	100%{
+		transform: translateY(0%);
+		opacity: 1;
+	}
 }
 
 .carte
@@ -44,6 +60,49 @@ header a img
 	background: #F2F2F2;
 	border-radius: 150px 150px 0px 0px;
 	position: relative;
+}
+
+.progress-barre
+{
+	animation-name: progress-barre;
+	animation-duration: 2000ms;
+	animation-delay: 1000ms;
+	animation-fill-mode: forwards;
+}
+
+@keyframes progress-barre{
+	0%{
+		transform: translateY(20%);
+	}
+	100%{
+		transform: translateY(0%);
+	}
+}
+
+.loader-page
+{
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	background: transparent;
+	visibility: hidden;
+	animation-name: loader-page;
+	animation-duration: 2000ms;
+	animation-fill-mode: forwards;
+}
+
+@keyframes loader-page{
+	0%{
+		background: transparent;
+		visibility: inherit;
+	}
+	50%{
+		background: #F2F2F2;
+	}
+	100%{
+		background: transparent;
+		visibility: hidden;
+	}
 }
 
 .carte h1
@@ -98,7 +157,6 @@ article
 	font-size: 7px;
 	background-color: white;
 	border-radius: 35px;
-	padding: 4em 3em 4em 0em;
 	margin-bottom: 6em;
 }
 
@@ -107,6 +165,10 @@ article
 	width: 84%;
 	margin: 0px;
 	font-size:16px;
+	margin: 2em 2em 2em 2em;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .etiquette strong
@@ -124,23 +186,47 @@ span.prix
 	font-size: 44px;
 	font-weight: bold;
 	float: right;
+	margin-right: 1em;
+	margin-bottom: 0.7em;
 }
 
 span.check
 {
-	display: none;
+	width: 0%;
+	background: #99E2D0;
+	height: 10vh;
+	border-radius: 0px 20px 20px 0px;
+	transform: scaleX(0);
+	transition: transform 1s;
 }
 
 span.check:hover
 {
-	display: flex;
-	color: white;
-	font-size: 53px;
-	background-color: #99E2D0;
-	padding: 1.2em 1em 1.3em 1em;
-	border-radius: 0px 30px 30px 0px;
+	width: 25%;
+	transform: scaleX(1);
 }
 
+i.fas.fa-check-circle.fa\.color
+{
+	font-size: 56px;
+	color: white;
+	padding: 1.2em 1em 0.5em;
+	left: 730px;
+	position: fixed;
+	opacity: 0;
+	transform: rotate(0);
+	transition-property: transform;
+	transition-duration: 0.2s;
+	transition-timing-function: ease-in-out;
+}
+
+i.fas.fa-check-circle.fa\.color:hover
+{
+	position: initial;
+	opacity: 1;
+	transform-origin: 50% 50%;
+	transform: rotate(360deg);
+}
 
 button.button
 {
@@ -157,46 +243,3 @@ button.button
 	box-shadow: 0px 0px 30px grey;
 }
 
-/* animation keyframe_download*/
-body /*carte menu*/
-{
-   &.carte{
-   	animation: .carte 2000ms;
-   }
-}
-
-@keyframes .carte{
-	0%{
-		background: white;
-	}
-	10%{
-		background: #F2F2F2;
-	}
-	15%{
-		background: linear-gradient(to top, transparent 0%, #F2F2F2 100%);
-	}
-	20%{
-		background: linear-gradient(to top, transparent 10%, #F2F2F2 100%);
-	}
-	30%{
-		background: linear-gradient(to top, transparent 20%, #F2F2F2 100%);
-	}
-	40%{
-		background: linear-gradient(to top, transparent 30%, #F2F2F2 100%);
-	}
-	50%{
-		background: linear-gradient(to top, transparent 40%, #F2F2F2 100%);
-	}
-	60%{
-		background: linear-gradient(to top, transparent 50%, #F2F2F2 100%);
-	}
-		70%{
-		background: linear-gradient(to top, transparent 60%, #F2F2F2 100%);
-	}
-		80%,90%{
-		background: linear-gradient(to top, transparent 80%, #F2F2F2 100%);
-	}
-	100%{
-		background: linear-gradient(to top, transparent 100%, #F2F2F2 0%);
-	}
-}
