--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -10,7 +10,7 @@ body
 header
 {
 	display: block;
-	height: 700px;
+	height: 219px;
 }
 
 header a
@@ -18,19 +18,20 @@ header a
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	padding: 3em 6em 3em 3em;
+	padding: 0.5em 1em 0.5em 1em;
 }
 
 i.fas.fa-arrow-left
 {
-	font-size: 50px;
+	font-size: 22px;
 	color: rgb(53,53,53);
-	padding-right: 3em;
+	padding-right: 1em;
 }
 
 header a img
 {
-	height: 75px;
+	height: 30px;
+	margin: auto;
 }
 
 .background img
@@ -56,58 +57,15 @@ header a img
 .carte
 {
 	text-align: center;
-	padding: 2em 3em 4em 3em;
+	padding: 1em 1em 1em 1em;
 	background: #F2F2F2;
-	border-radius: 150px 150px 0px 0px;
+	border-radius: 46px 46px 0px 0px;
 	position: relative;
-}
-
-.progress-barre
-{
-	animation-name: progress-barre;
-	animation-duration: 2000ms;
-	animation-delay: 1000ms;
-	animation-fill-mode: forwards;
-}
-
-@keyframes progress-barre{
-	0%{
-		transform: translateY(20%);
-	}
-	100%{
-		transform: translateY(0%);
-	}
-}
-
-.loader-page
-{
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	background: transparent;
-	visibility: hidden;
-	animation-name: loader-page;
-	animation-duration: 2000ms;
-	animation-fill-mode: forwards;
-}
-
-@keyframes loader-page{
-	0%{
-		background: transparent;
-		visibility: inherit;
-	}
-	50%{
-		background: #F2F2F2;
-	}
-	100%{
-		background: transparent;
-		visibility: hidden;
-	}
 }
 
 .carte h1
 {
-	font-size: 72px;
+	font-size: 20px;
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
@@ -120,6 +78,7 @@ h1 strong
 
 i.far.fa-heart
 {
+	font-size: 19px;
 	color: black;
 	position: inherit;
 	padding-right: 0.5em;
@@ -129,13 +88,13 @@ i.far.fa-heart
 article
 {
 	display: block;
-	margin-bottom: 6em;
+	margin-bottom: 2em;
 }
 
 .carte h2
 {
 	font-weight: 300;
-	font-size: 46px;
+	font-size: 14px;
 	text-align: initial;
 	margin-bottom: 1.2em;
 }
@@ -143,46 +102,44 @@ article
 .overline
 {
 	padding-bottom: 0.2em;
-	border-bottom: 6px solid #99E2D0;
+	border-bottom: 3px solid #99E2D0;
 }
 
 .etiquette
 {
 	cursor: pointer;
-	height: 163px;
-	width: auto;
 	text-align: initial;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: flex-end;
 	font-size: 7px;
 	background-color: white;
-	border-radius: 35px;
-	margin-bottom: 6em;
+	border-radius: 18px;
+	margin-bottom: 2em;
 	opacity: 0;
 	animation-name: etiquette;
-	animation-duration: 5000ms;
+	animation-duration: 2000ms;
 	animation-fill-mode: forwards;
 }
 
 .etiquette:nth-child(1)
 {
-	animation-delay: 1000ms;
+	animation-delay: 0ms;
 }
 
 .etiquette:nth-child(2)
 {
-	animation-delay: 2000ms;
+	animation-delay: 750ms;
 }
 
 .etiquette:nth-child(3)
 {
-	animation-delay: 3000ms;
+	animation-delay: 1500ms;
 }
 
 .etiquette:nth-child(4)
 {
-	animation-delay: 4000ms;
+	animation-delay: 2000ms;
 }
 
 
@@ -190,18 +147,11 @@ article
 @keyframes etiquette{
 	0%{
 		opacity: 0;
-	}
-	50%{
-		opacity: 0.5;
-	}
-	70%{
-		opacity: 0.6;
-	}
-	80%{
-		opacity: 0.8;
+		transform: translateY(20%);
 	}
 	100%{
 		opacity: 1;
+		transform: translateY(0%);
 	}
 }
 
@@ -210,7 +160,7 @@ article
 	width: 84%;
 	margin: 0px;
 	font-size:16px;
-	margin: 2em 2em 2em 2em;
+	margin: 0.5em 0.5em 0.5em 0.5em;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -218,17 +168,17 @@ article
 
 .etiquette strong
 {
-	font-size: 49px;
+	font-size: 13px;
 }
 
 .etiquette .accompagnement
 {
-	font-size: 39px;
+	font-size: 12px;
 }
 
 span.prix
 {
-	font-size: 44px;
+	font-size: 17px;
 	font-weight: bold;
 	float: right;
 	margin-right: 1em;
@@ -239,11 +189,13 @@ span.check
 {
 	width: 0%;
 	height: 100%;
+	padding-top: 3em;
+	padding-bottom: 2em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background: #99E2D0;
-	border-radius: 0px 35px 35px 0px;
+	border-radius: 0px 18px 18px 0px;
 }
 
 .etiquette:hover > span.check,.etiquette:focus > span.check
@@ -261,14 +213,9 @@ span.check
 
 i.fas.fa-check-circle.fa\.color
 {
-	font-size: 56px;
+	font-size: 20px;
 	color: white;
 	opacity: 0;
-	transform: rotate(0);
-	transition-property: transform;
-	transition-duration: 1.5s;
-	transition-delay: 0.3s;
-	transition-timing-function: ease-in-out;
 }
 .etiquette:hover > span.check i,.etiquette:focus > span.check i
 {
@@ -285,7 +232,7 @@ button.button
 {
 	cursor: pointer;
 	color: white;
-	font-size: 53px;
+	font-size: 14px;
 	padding: 0.8em 2em 0.8em 2em;
 	margin-left: 21%;
 	margin-right: 21%;
@@ -315,7 +262,7 @@ button.button
 
 		header a
 		{
-			padding: 1em 1em 1em 1em;
+			padding: 1.3em 1em 0.5em 1em;
 		}
 
 		i.fas.fa-arrow-left
@@ -326,6 +273,7 @@ button.button
 		header a img
 		{
 			height: 50px;
+			margin: 0px;
 		}
 
 		.background img
@@ -338,12 +286,17 @@ button.button
 
 		.carte
 		{
-			border-radius: 150px 150px 150px 150px;
+			border-radius: 100px 100px 100px 100px;
 		}
 
 		.carte h1
 		{
 			font-size: 38px;
+		}
+
+		i.far.fa-heart
+		{
+			font-size: 35px;
 		}
 
 		.carte h2
@@ -367,12 +320,12 @@ button.button
 		.etiquette
 		{
 			width: 48%;
-			height: 120px;
 		}
 
 		.etiquette p
 		{
-			margin: 1em 1em 2em 2em;
+			margin-bottom: 1em;
+			margin-left: 1em;
 		}
 
 		.etiquette strong
@@ -385,14 +338,19 @@ button.button
 			font-size: 15px;
 		}
 
+		span.check
+		{
+			padding: 0em;
+		}
+
 		span.prix
 		{
-			font-size: 34px;
+			font-size: 22px;
 		}
 
 		button.button
 		{
-			font-size: 30px;
+			font-size: 20px;
 			margin-bottom: 0em;
 		}
 
